loopfor.LoopFor.scala.error
Compilation error:
LoopFor:14: error: '(' expected but identifier found.
for i(i2<-1 to nbpas){
    ^