loopfor.LoopFor.scala.code
var dejafait:Int=0
var nbpas:Int=0
var i: Int=0
var i2:Int=0

while (estSurBiscuit()==false & i<10){
  avance()
  i=i+1
  nbpas=nbpas+1
  
}
prendBiscuit()

for i(i2<-1 to nbpas){
  recule()
}
  

poseBiscuit()